--- a/PDFViwer/PDFViwer.vcxproj.filters
+++ b/PDFViwer/PDFViwer.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Trailer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Utily.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Utily.h">
