--- a/PDFViwer/PDFViwer.vcxproj.filters
+++ b/PDFViwer/PDFViwer.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="kude.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="KUDEType.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
