--- a/PDFViwer/PDFViwer.vcxproj
+++ b/PDFViwer/PDFViwer.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Object.cpp" />
+    <ClCompile Include="ObjectLInk.cpp" />
     <ClCompile Include="PDFDocument.cpp" />
     <ClCompile Include="PdfHeader.cpp" />
     <ClCompile Include="Trailer.cpp" />
@@ -148,8 +149,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="KUDEType.h" />
-    <ClInclude Include="KUDELOG.h" />
+    <ClInclude Include="KUDEDebug.h" />
     <ClInclude Include="Object.h" />
+    <ClInclude Include="ObjectLInk.h" />
     <ClInclude Include="PDFDocument.h" />
     <ClInclude Include="PdfHeader.h" />
     <ClInclude Include="kude.h" />
