PDF viwer  ver 0.0000003...
Beffer class,  Object Add;

--- a/PDFViwer/PDFViwer.vcxproj.filters
+++ b/PDFViwer/PDFViwer.vcxproj.filters
@@ -68,5 +68,8 @@
     <ClInclude Include="Object.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Buffer.hpp">
+      <Filter>Header Files\Common</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
