--- a/PDFViwer/PDFViwer.vcxproj
+++ b/PDFViwer/PDFViwer.vcxproj
@@ -148,6 +148,7 @@
     <ClCompile Include="Utily.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Buffer.hpp" />
     <ClInclude Include="KUDEType.h" />
     <ClInclude Include="KUDEDebug.h" />
     <ClInclude Include="Object.h" />
