--- a/PDFViwer/PDFViwer.vcxproj.filters
+++ b/PDFViwer/PDFViwer.vcxproj.filters
@@ -68,7 +68,7 @@
     <ClInclude Include="Object.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Buffer.hpp">
+    <ClInclude Include="FileBuffer.hpp">
       <Filter>Header Files\Common</Filter>
     </ClInclude>
   </ItemGroup>
